--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,9 @@ version = "0.1.0"
 dependencies = ["nerfstudio >= 0.3.0"] 
 
 [tool.setuptools.packages.find]
-include = ["splatfactoenv*"]
+include = ["splatfactoenv*","splatfactoenv_rgb*"]
 
 # register the entry point of your new method here:
 [project.entry-points.'nerfstudio.method_configs']
-method-template = 'splatfactoenv.splatfactoenv_config:splatfactoenv'
+splatfactoenv = 'splatfactoenv.splatfactoenv_config:splatfactoenv'
+splatfactoenv_rgb = 'splatfactoenv.splatfactoenv_config:splatfactoenvrgb'
